fix: correct the media rule to adjust font size on smaller screens.

--- a/src/sass/components/_loadingPage.scss
+++ b/src/sass/components/_loadingPage.scss
@@ -20,6 +20,10 @@
       font-size: 3rem;
       font-weight: 800;
       text-transform: uppercase;
+
+      @media (width <= 640px) {
+        font-size: 2rem;
+      }
     }
   }
 
